# rust-urlpattern

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: parse_patterns.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parse.rs
src/: canonicalize_and_process.rs  component.rs  component_callbacks.rs  constructor_parser.rs  error.rs  lib.rs  matcher.rs  parser.rs  quirks.rs  regexp.rs  tokenizer.rs
src/testdata/: urlpatterntestdata.json
