[package]
name = "urlpattern"
version = "0.1.0"
edition = "2018"

[dependencies]
derive_more = "0.99.16"
url = "2.2.2"
regex = "1.5.4"
serde = { version = "1.0.127", features = ["derive"] }
serde_regex = "1.1.0"
unic-ucd-ident = { version = "0.9.0", features = ["id"] }

[dev-dependencies]
serde_json = "1.0.66"
