[package]
name = "urlpattern"
version = "0.1.5"
authors = ["the Deno authors", "crowlKats <crowlkats@toaxl.com>"]
edition = "2018"
description = "rust-urlpattern is a Rust implementation of the URLPattern standard"
repository = "https://github.com/denoland/rust-urlpattern"
license = "MIT"

[dependencies]
derive_more = "0.99.16"
url = "2.2.2"
regex = "1.4.3"
serde = { version = "1.0.127", features = ["derive"] }
unic-ucd-ident = { version = "0.9.0", features = ["id"] }

[dev-dependencies]
serde_json = "1.0.66"
