[package]
name = "urlpattern"
version = "0.3.0"
authors = ["the Deno authors", "crowlKats <crowlkats@toaxl.com>"]
edition = "2021"
description = "rust-urlpattern is a Rust implementation of the URLPattern standard"
repository = "https://github.com/denoland/rust-urlpattern"
license = "MIT"

[dependencies]
url = "2.4.1"
regex = "1.10.5"
serde = { version = "1.0.127", features = ["derive"] }
unic-ucd-ident = { version = "0.9.0", features = ["id"] }

[dev-dependencies]
serde_json = "1.0.66"
